--- a/app/templates/download.html
+++ b/app/templates/download.html
@@ -3,19 +3,19 @@
 	<hr />
 	<div class="row-fluid" id="installers">
 		<div class="span4" id="mac-installer">
-			<img src="/img/apple.gif" />
+			<img src="/deployd.com/img/apple.gif" />
 			<h3>Mac Installer</h3>
 			<strong class="file-name">&nbsp;</strong>
 			<a href="#" class="btn btn-primary installer-download invisible"><i class="icon-white icon-download"></i> install</a>
 		</div>
 		<div class="span4" id="win-installer">
-			<img src="/img/win.gif"/>
+			<img src="/deployd.com/img/win.gif"/>
 			<h3>Win Installer</h3>
 			<strong class="file-name">&nbsp;</strong>
 			<a href="#" class="btn btn-primary installer-download invisible"><i class="icon-white icon-download"></i> install</a>
 		</div>
 		<div class="span4" id="source">
-			<img src="/img/source.png" />
+			<img src="/deployd.com/img/source.png" />
 			<h3>Source</h3>
 			<strong class="file-name">&nbsp;</strong>
 			<a href="" class="btn btn-primary installer-download invisible"><i class="icon-white icon-download"></i> download</a>
@@ -27,6 +27,6 @@
 	<div class="well">
 		<h2>Thanks for Downloading</h2>
 		<p>If your download doesn't start automatically, <a class="manual-download" href="DOWNLOAD_LINK">click here</a></p>
-		<p>In the meantime, make sure to <a href="http://eepurl.com/e3gYY" target="_blank">sign up for emails</a>, check us out on <a href="https://github.com/deployd/deployd" target="_blank">Github</a>, and follow us on <a href="https://twitter.com/deploydapp" target="_blank">twitter</a>. 
+		<p>In the meantime, make sure to <a href="http://eepurl.com/e3gYY" target="_blank">sign up for emails</a>, check us out on <a href="https://github.com/deployd/deployd" target="_blank">Github</a>, and follow us on <a href="https://twitter.com/deploydapp" target="_blank">twitter</a>.
 	</div>
 </div>
