--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
           <div id="social" class="nav-collapse pull-left">
             <ul class="nav">
               <li><a data-text="Deployd Platform (@deploydapp) - The simplest way to build APIs." data-url="http://www.deployd.com" href="https://twitter.com/share" class="twitter-share-button" data-lang="en"></a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="/deployd.com//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></li>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></li>
             </ul>
           </div>
         </div>
@@ -47,7 +47,7 @@
           </p>
         </div>
         <div class="span demo">
-          <iframe width="640" height="360" src="/deployd.com//www.youtube.com/embed/I_Jq1BVj6D0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="640" height="360" src="//www.youtube.com/embed/I_Jq1BVj6D0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
       <div class="row-fluid home-install-row">
