fix twitter script

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="project-social span5">
           <a href="https://twitter.com/deploydapp" class="twitter-follow-button" data-show-count="false">Follow @deploydapp</a>
-          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="/deployd.com//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           &nbsp;
           <iframe width="100" height="20"
           src="http://ghbtns.com/github-btn.html?user=deployd&repo=deployd&type=watch&count=true" frameborder="0" scrolling="0" allowtransparency="true"></iframe>
