make paths relative

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -221,7 +221,7 @@ body > .container {
   }
 
   #video {
-    background: @black url('/deployd.com/img/video-md.png');
+    background: @black url('img/video-md.png');
   }
 
   #video img {
@@ -406,7 +406,7 @@ footer {
 #why-well {
   padding-bottom: 0;
   padding-top: 10px;
-  background: url('/deployd.com/img/bg-blue.png');
+  background: url('img/bg-blue.png');
   border: solid 1px #a7bfbf;
   .box-shadow(none);
   #why {
@@ -530,7 +530,7 @@ section.home-features {
 div.container-fluid.team-tailored {
   margin: 63px auto 0;
   background-color: #363535;
-  background: url('/deployd.com/img/hackathon.jpg');
+  background: url('img/hackathon.jpg');
   background-size: cover;
   background-position: center center;
   &>section {
