--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=1280, maximum-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Bitter:400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link href="/deployd.com/all.css" rel="stylesheet" type="text/css">
+    <link href="all.css" rel="stylesheet" type="text/css">
   </head>
   <body class="index">
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="/deployd.com/">
-            <img src="/deployd.com/img/logo-text.png" />
+          <a class="brand" href="">
+            <img src="img/logo-text.png" />
           </a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="/deployd.com//docs.deployd.com">docs <i class="icon-external-link"></i></a></li>
+              <li><a href="/docs.deployd.com">docs <i class="icon-external-link"></i></a></li>
               <li><a href="https://groups.google.com/forum/?fromgroups#!forum/deployd-users">community <i class="icon-external-link"></i></a></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -74,7 +74,7 @@
         </div>
         <section class="row">
           <div class="span3">
-            <img src="/deployd.com/img/boilerplate-graphic.png" alt="Boilerplate illustration.">
+            <img src="img/boilerplate-graphic.png" alt="Boilerplate illustration.">
             <h3>1. No boilerplate</h3>
 
             <p>
@@ -82,7 +82,7 @@
             </p>
           </div>
           <div class="span3">
-            <img src="/deployd.com/img/resources-graphic.png" alt="Resources illustration.">
+            <img src="img/resources-graphic.png" alt="Resources illustration.">
             <h3>2. Resources</h3>
 
             <p>
@@ -90,7 +90,7 @@
             </p>
           </div>
           <div class="span3">
-            <img src="/deployd.com/img/dashboard-graphic.png" alt="Dashboard illustration.">
+            <img src="img/dashboard-graphic.png" alt="Dashboard illustration.">
             <h3>3. Dashboard</h3>
 
             <p>
@@ -98,7 +98,7 @@
             </p>
           </div>
           <div class="span3">
-            <img src="/deployd.com/img/1-step-deploy.png" alt="Deployment illustration.">
+            <img src="img/1-step-deploy.png" alt="Deployment illustration.">
             <h3>4. 1-step deploy</h3>
 
             <p>
@@ -112,7 +112,7 @@
           <div class="row">
             <div class="span4">
               <div class="well">
-                <img src="/deployd.com/img/bucket/modular.png" class="bucket-graphic" alt="Building blocks." />
+                <img src="img/bucket/modular.png" class="bucket-graphic" alt="Building blocks." />
                 <h3>Flexibility through modularity</h3>
 
                 <p>
@@ -137,7 +137,7 @@
                 <a target="_blank" href="https://twitter.com/SonicCoder/status/238448287345176577">@SonicCoder</a>
               </span>
               <div class="well">
-                <img src="/deployd.com/img/bucket/graph.png" class="bucket-graphic" alt="Graph graphic." />
+                <img src="img/bucket/graph.png" class="bucket-graphic" alt="Graph graphic." />
                 <h3>Easy Graph Data</h3>
 
                 <p>
@@ -179,7 +179,7 @@ dpd.comments.get({postId: this.id},
             </div>
             <div class="span4">
               <div class="well">
-                <img src="/deployd.com/img/bucket/polling.png" class="bucket-graphic" alt="Death." />
+                <img src="img/bucket/polling.png" class="bucket-graphic" alt="Death." />
                 <h3>Death to polling</h3>
 
                 <p>
@@ -196,7 +196,7 @@ dpd.on('postCreated', function(post) {
                 </p>
               </div>
               <div class="well">
-                <img src="/deployd.com/img/bucket/validation.png" class="bucket-graphic" alt="Check." />
+                <img src="img/bucket/validation.png" class="bucket-graphic" alt="Check." />
                 <h3>Flexible validation</h3>
 
                 <p>
@@ -212,7 +212,7 @@ if (!me.admin) {
                 <a href="http://docs.deployd.com/docs/collections/adding-logic.md">See full Events documentation</a>
               </div>
               <div class="well">
-                <img src="/deployd.com/img/bucket/user.png" class="bucket-graphic" alt="Out of the box." />
+                <img src="img/bucket/user.png" class="bucket-graphic" alt="Out of the box." />
                 <h3>
                   Out of the box user management
                 </h3>
@@ -240,7 +240,7 @@ dpd.users.login({
             </div>
             <div class="span4">
               <div class="well">
-                <img src="/deployd.com/img/bucket/javascript.png" class="bucket-graphic" alt="JS." />
+                <img src="img/bucket/javascript.png" class="bucket-graphic" alt="JS." />
                 <h3>JavaScript throughout</h3>
 
                 <ol>
@@ -256,7 +256,7 @@ dpd.users.login({
                 </p>
               </div>
               <div class="well">
-                <img src="/deployd.com/img/bucket/library.png" class="bucket-graphic" alt="Librarian glasses." />
+                <img src="img/bucket/library.png" class="bucket-graphic" alt="Librarian glasses." />
                 <h3>A library to end all libraries</h3>
 
                 <p>
@@ -275,7 +275,7 @@ dpd.users.login({
                 <a target="_blank" href="https://twitter.com/dan_tamas/status/238323413079449600">@dan_tamas</a>
               </span>
               <div class="well">
-                <img src="/deployd.com/img/bucket/queries.png" class="bucket-graphic" alt="Death." />
+                <img src="img/bucket/queries.png" class="bucket-graphic" alt="Death." />
                 <h3>Clients deserve advanced queries, too!</h3>
 
                 <p>
@@ -357,9 +357,9 @@ dpd.users.login({
         <div class="row">
           <div class="span navigation">
             <dl>
-              <dt><img src="/deployd.com/img/footer-dt.png" alt="deployd"></dt>
-              <dd><a href="/deployd.com/">Home</a></dd>
-              <dd><a href="/deployd.com/video.html">Screencast</a></dd>
+              <dt><img src="img/footer-dt.png" alt="deployd"></dt>
+              <dd><a href="">Home</a></dd>
+              <dd><a href="video.html">Screencast</a></dd>
               <dd><a href="https://github.com/deployd/deployd/issues">Support</a></dd>
             </dl>
             <dl>
@@ -379,7 +379,7 @@ dpd.users.login({
           </div>
           <div class="span logo-container">
             <div class="logo">
-              <img src="/deployd.com/img/footer-logo.png" alt="deployd">
+              <img src="img/footer-logo.png" alt="deployd">
             </div>
           </div>
           <div class="span email-container">
@@ -414,7 +414,7 @@ dpd.users.login({
       <img alt="Fork me on GitHub" id="ribbon" src="http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png">
     </a>
 
-    <script src="/deployd.com/all.js"></script>
+    <script src="all.js"></script>
   </body>
 
   <script type="text/javascript">
