--- a/app/less/home.less
+++ b/app/less/home.less
@@ -36,7 +36,7 @@ body.index {
         display:block;
         width:670px;
         height: 340px;
-        background:url('/deployd.com/img/demo-screen.png');
+        background:url('img/demo-screen.png');
         img {
           margin-left:15px;
           margin-top:-10px;
@@ -70,7 +70,7 @@ body.index {
   }
 
   #video {
-    background: @black url('/deployd.com/img/video-lg.png');
+    background: @black url('img/video-lg.png');
     img {
       width: 100%;
     }
@@ -85,7 +85,7 @@ body.index {
 
   #hosting {
     #video {
-      background: @black url('/deployd.com/img/video-sm.png');
+      background: @black url('img/video-sm.png');
     }
   }
 
