--- a/all.css
+++ b/all.css
@@ -1415,8 +1415,8 @@ table .span24 {
     */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('font/fontawesome-webfont.eot');
-  src: url('font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('font/fontawesome-webfont.woff') format('woff'), url('font/fontawesome-webfont.ttf') format('truetype'), url('font/fontawesome-webfont.svg#FontAwesome') format('svg');
+  src: url('./font/fontawesome-webfont.eot');
+  src: url('./font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('./font/fontawesome-webfont.woff') format('woff'), url('./font/fontawesome-webfont.ttf') format('truetype'), url('./font/fontawesome-webfont.svg#FontAwesome') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -6550,8 +6550,8 @@ table .span24 {
     */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('font/fontawesome-webfont.eot');
-  src: url('font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('font/fontawesome-webfont.woff') format('woff'), url('font/fontawesome-webfont.ttf') format('truetype'), url('font/fontawesome-webfont.svg#FontAwesome') format('svg');
+  src: url('./font/fontawesome-webfont.eot');
+  src: url('./font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('./font/fontawesome-webfont.woff') format('woff'), url('./font/fontawesome-webfont.ttf') format('truetype'), url('./font/fontawesome-webfont.svg#FontAwesome') format('svg');
   font-weight: normal;
   font-style: normal;
 }
