Fix documentation link, update install link

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,8 +16,9 @@
           </a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="/docs.deployd.com">docs <i class="icon-external-link"></i></a></li>
-              <li><a href="https://groups.google.com/forum/?fromgroups#!forum/deployd-users">community <i class="icon-external-link"></i></a></li>
+              <li><a href="//docs.deployd.com" target="_blank">docs <i class="icon-external-link"></i></a></li>
+              <li><a href="https://groups.google.com/forum/?fromgroups#!forum/deployd-users" target="_blank">community <i class="icon-external-link"></i></a></li>
+              <li><a href="https://gitter.im/deployd/deployd" target="_blank">chat <i class="icon-external-link"></i></a></li>
             </ul>
           </div><!--/.nav-collapse -->
           <div id="social" class="nav-collapse pull-left">
@@ -86,7 +87,7 @@
             <h3>2. Resources</h3>
 
             <p>
-              Deployd APIs are built of plug-and-play resources, such as <a href="http://docs.deployd.com/docs/collections/creating-collections.md">Collection</a>, which can easily be added and defined through the deployd dashboard.
+              Deployd APIs are built of plug-and-play resources, such as <a href="http://docs.deployd.com/docs/collections/creating-collections.html">Collection</a>, which can easily be added and defined through the deployd dashboard.
             </p>
           </div>
           <div class="span3">
@@ -192,7 +193,7 @@ dpd.on('postCreated', function(post) {
 });</code></pre>
 
                 <p>
-                  With deployd's rich Events model, it's easy to validate, secure, and scope realtime messages to specific users or groups. <a href="http://docs.deployd.com/docs/collections/adding-logic.md">See docs</a>.
+                  With deployd's rich Events model, it's easy to validate, secure, and scope realtime messages to specific users or groups. <a href="http://docs.deployd.com/docs/collections/adding-logic.html">See docs</a>.
                 </p>
               </div>
               <div class="well">
@@ -209,7 +210,7 @@ if (!me.admin) {
   cancel("You can't do that!", 401);
 }</code></pre>
 
-                <a href="http://docs.deployd.com/docs/collections/adding-logic.md">See full Events documentation</a>
+                <a href="http://docs.deployd.com/docs/collections/adding-logic.html">See full Events documentation</a>
               </div>
               <div class="well">
                 <img src="img/bucket/user.png" class="bucket-graphic" alt="Out of the box." />
@@ -233,7 +234,7 @@ dpd.users.login({
   password: "secret"
 }, onLogin);</code></pre>
 
-                <a href="http://docs.deployd.com/docs/users/creating-user-collections.md">
+                <a href="http://docs.deployd.com/docs/users/creating-user-collections.html">
                   See User Collection Docs
                 </a>
               </div>
@@ -265,7 +266,7 @@ dpd.users.login({
 
                 <pre class="prettyprint lang-javascript"><code>dpd.collection.get({id: 1}, console.log)</code></pre>
 
-                <a href="http://docs.deployd.com/docs/collections/reference/dpd-js.md">
+                <a href="http://docs.deployd.com/docs/collections/reference/dpd-js.html">
                   See full dpd.js reference
                 </a>
               </div>
@@ -296,7 +297,7 @@ dpd.users.login({
   category: {$in: ["food", "business"]}
 }, console.log);</code></pre>
 
-                <a href="http://docs.deployd.com/docs/collections/reference/querying-collections.md#s-Advanced Queries-2035">
+                <a href="http://docs.deployd.com/docs/collections/reference/querying-collections.html#s-Advanced Queries-2035">
                   See all advanced queries in the docs
                 </a>
               </div>
@@ -359,7 +360,6 @@ dpd.users.login({
             <dl>
               <dt><img src="img/footer-dt.png" alt="deployd"></dt>
               <dd><a href="">Home</a></dd>
-              <dd><a href="video.html">Screencast</a></dd>
               <dd><a href="https://github.com/deployd/deployd/issues">Support</a></dd>
             </dl>
             <dl>
@@ -372,9 +372,10 @@ dpd.users.login({
             <dl>
               <dt>community</dt>
               <dd><a href="https://groups.google.com/forum/?fromgroups#!forum/deployd-users">Deployd Users Google Group</a></dd>
-              <dd><a href="https://twitter.com/deploydapp">Tweets</a></dd>
-              <dd><a href="https://github.com/deployd/deployd/issues">Issues</a></dd>
-              <dd><a href="https://github.com/deployd/deployd">Github</a></dd>
+              <dd><a href="https://gitter.im/deployd/deployd" target="_blank">Chat</a></dd>
+              <dd><a href="https://twitter.com/deploydapp" target="_blank">Tweets</a></dd>
+              <dd><a href="https://github.com/deployd/deployd/issues" target="_blank">Issues</a></dd>
+              <dd><a href="https://github.com/deployd/deployd" target="_blank">Github</a></dd>
             </dl>
           </div>
           <div class="span logo-container">
