--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -415,6 +415,7 @@ dpd.users.login({
       <img alt="Fork me on GitHub" id="ribbon" src="http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png">
     </a>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
     <script src="all.js"></script>
   </body>
 
