--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,9 +52,14 @@
         </div>
       </div>
       <div class="row-fluid home-install-row">
-        <div class="download span7">
-          <installer></installer>
-        </div>
+          <div class="download span7">
+            <div>
+              <span>
+              <a  href="https://github.com/deployd/deployd#install-from-npm" class="btn-primary btn btn-large">Install deployd</a>
+              <span class="install-version"><a href="https://www.npmjs.com/package/deployd"><img src="https://img.shields.io/npm/v/deployd.svg?style=flat-square"></a></span>
+            </span>
+            </div>
+          </div>
         <div class="project-social span5">
           <a href="https://twitter.com/deploydapp" class="twitter-follow-button" data-show-count="false">Follow @deploydapp</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
